- Explicit Docker-style tar route now also requires valid `manifest.json` and `repositories` JSON payload structure, and requires manifest layer references to resolve to tar entries.
- Explicit Docker-style tar route now requires at least one repository/tag mapping in `repositories` JSON, preventing non-empty but non-usable repository shells from passing strict routing.
- Explicit compose route now fails closed when service placeholders exist without valid indented service entries or without `image`/`build` evidence, while still allowing build-only compose service definitions.
- Explicit SBOM route now fails closed when package/component evidence is empty, preventing empty SBOM shells from passing strict container SBOM analysis.
- SBOM JSON parsing now emits bounded package/component counts when present.
- Signature/cert adapter extraction deepened:
- Deterministic PEM block counting for certificate/PKCS7/signature material.
- Strict PEM envelope evidence now requires decodable DER-like payload bytes; malformed PEM payload wrappers no longer pass explicit signature routing.
- Strict signature routing now enforces extension-compatible envelope evidence (`.p7b` and `.sig` no longer pass with certificate-only PEM envelopes).
- Binary OID hint counts added for CMS signedData and timestamp EKU indicators.
- DER certificate fallback in explicit `.cer/.crt` strict mode now requires X.509 name OID evidence (`2.5.4.*`), preventing generic large DER blobs from passing as certificate evidence.
- Explicit signature route now requires real envelope/OID/DER evidence; text-only timestamp/chain hints no longer satisfy strict signature validity checks.
- Explicit signature route now rejects tiny generic DER blobs as insufficient strict signature evidence.
- Generic DER fallback in strict signature mode is now limited to certificate extensions (`.cer/.crt`), so `.sig` requires explicit signature-envelope/OID evidence.
- SCM/source evidence adapter extraction deepened: